# telepathy-kdeconnect

./: .gitignore  .reviewboardrc  CMakeLists.txt  Doxyfile  README  connection.cpp  connection.h  kdeconnect.manager  kdeconnect.profile  kdeconnecttelepathyprotocolfactory.cpp  main.cpp  protocol.cpp  protocol.h
